[project]
name = "a-maze-ing"
version = "0.1.0"
description = ""
authors = [
    { name="aguennac", email="aguennac@student.1337.ma" },
    { name="nel-ouad", email="nel-ouad@student.1337.ma" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
